--- a/index.html
+++ b/index.html
@@ -42,7 +42,44 @@
             <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, alias?</h1>
 
             <button>Work with us!</button>
+            </div>
     </header>
+
+    <main>
+        <div class="service-top">
+            <h1>Services we provide</h1>
+
+           
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla natus eligendi, sequi voluptates nemo dolores ut possimus quo mollitia architecto quod, et aspernatur. Ex totam pariatur et sed hic ducimus.</p>
+
+         <div class="service-bottom">
+            <div class="service-item">
+                <img src="" alt="">
+                <h3>Branding</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, veniam totam officia quos, temporibus minima praesentium excepturi ea ipsum aliquam, tenetur placeat quisquam labore perferendis quasi error laborum alias vel?</p>
+                </div>
+
+                <div class="service-bottom">
+                    <div class="service-item">
+                        <img src="" alt="">
+                        <h3>Design</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, veniam totam officia quos, temporibus minima praesentium excepturi ea ipsum aliquam, tenetur placeat quisquam labore perferendis quasi error laborum alias vel?</p>
+                        </div>
+
+                        <div class="service-bottom">
+                            <div class="service-item">
+                                <img src="" alt="">
+                                <h3>Development</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, veniam totam officia quos, temporibus minima praesentium excepturi ea ipsum aliquam, tenetur placeat quisquam labore perferendis quasi error laborum alias vel?</p>
+                                </div>
+
+                                <div class="service-bottom">
+                                    <div class="service-item">
+                                        <img src="" alt="">
+                                        <h3>Rocket Science</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, veniam totam officia quos, temporibus minima praesentium excepturi ea ipsum aliquam, tenetur placeat quisquam labore perferendis quasi error laborum alias vel?</p>
+                                        </div>
+    </main>
 
 
 </body>
