--- a/index.html
+++ b/index.html
@@ -82,5 +82,35 @@
     </main>
 
 
+    <footer>
+        <div>
+            <div class="form- top">
+                <h1>GET IN TOUCH</h1>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+
+                <div class="form-bottom">
+
+                    <form>
+                        <input type="text" placeholder="Your Name" required>
+                        <input type="email" placeholder="Yoyr Email" required>
+                        <textarea placeholder="Your Message" required></textarea><br><br>
+                        <button>Send Message</button>
+                    </form>
+                    </div>
+                    </div>
+
+                    <div class="social-media">
+                        <ul>
+                            <li>Facebook</li>
+                            <li>Twitter</li>
+                            <li>Linledin</li>
+                            <li>Instagram</li>
+                        </ul>
+                        </div>
+        </div>
+    </footer>
+
+
 </body>
 </html>
